--- a/sass/_elements.scss
+++ b/sass/_elements.scss
@@ -9,9 +9,8 @@
 /* Copyright: (C) 2016 */
 /*-------------------------------------------------------------------------------------------------------------------------------*/
 
-
 /*--------------------------------------------------------*/
-/* TABLE OF CONTENTS: *//*
+/* TABLE OF CONTENTS:: *//*
 
     01 - ALL STYLES
     02 - ABOUT SECTION
@@ -768,7 +767,7 @@ a {
         overflow: hidden;
         &::before{
             content: "";
-            position: absolute;
+            position:absolute;
             top: 0;
             bottom: 0;
             right: 0;
@@ -785,7 +784,7 @@ a {
             top: 50px;
             bottom: 50px;
             right: 50px;
-            background: rgba(200, 51, 96, .8);
+            background:#C23334;
             opacity: 0;
             cursor: pointer;
             
@@ -1361,8 +1360,8 @@ a {
 /*-------------------------------------------------------------------------------------------------------------------------------*/
 .p-gym-classes{
     position: relative;
-    padding: 271px 0 0;
-    min-height: 838px;
+    padding: 110px 0 0;
+    min-height: 590px;
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -1373,11 +1372,13 @@ a {
         bottom: 0;
         right: 0;
         left: 0;
-        background: rgba(51, 51, 51, .75);
+        background: #fff;
         z-index: 1;
 
     }
-    
+    .heading-title{
+        color:#000;
+    }
     .gym-classes-row{
         margin-top: 80px;
         position: relative;
@@ -1402,18 +1403,17 @@ a {
                 }
                 
                 a{
-                    background: #C83360;
+                    background: #c2c2c2;
                     color: #fff;
                 }
                 
             }
         }  
-        
         .class-date{
             font-style: italic;
             font-size: 13px;
             letter-spacing: 3.2px;
-            
+            color: #000;
         }
         
         .class-type{
@@ -1424,6 +1424,7 @@ a {
             a{
                 display: inline-block;
                 padding:  10px 15px;
+                background:#C23334;
             }
         }
         
@@ -1432,6 +1433,7 @@ a {
             font-size: 13px;
             opacity: .8;
             letter-spacing: .8px;
+            color: #000;
         }
     }
     
@@ -1534,6 +1536,7 @@ a {
         padding: 60px 30px;
         height: 280px;
         cursor: pointer;
+        background:#fff;
         &::before{
             content: "";
                 position: absolute;
@@ -3554,7 +3557,7 @@ a {
         margin: 30px 0;
     }
 	.title {
-		color: #ff3366;
+		color: #C23334;
 		text-transform: uppercase;
 		text-align: center;
 		font: 800 32px "Raleway", sans-serif;
@@ -3783,7 +3786,7 @@ a {
     }
 	.wrap-footer {
 		background-color: #1e1e1e;
-		border-top: 4px solid #ff3366;
+		border-top: 4px solid #C23334;
 		.right-section {
 			padding-top: 130px;
             @media(max-width: 991px) {
