--- a/sass/_elements.scss
+++ b/sass/_elements.scss
@@ -2027,7 +2027,7 @@ a {
 			    width: 100%;
 			    height: 100%;
 			    position: absolute;
-			    background-color: rgba(243,59,105, 0.7);
+			    background-color: rgba(194, 51, 52, 0.7);
 			    z-index: 9;
 			    font-size: 40px;
 			    color: #fff;
@@ -2616,7 +2616,7 @@ a {
     }
     
     .swiper-active-switch{
-        background: #c83360;
+        background: #C23334;
     }
 }
 
@@ -3668,7 +3668,7 @@ a {
         }
     }
     .fa {
-        color: #ff3366;
+        color: #C23334;
         font-size: 20px;
         margin-right: 10px;
         &.fa-mobile-phone {
@@ -3832,7 +3832,7 @@ a {
         font-size: 14px;
     }
     .mark {
-        color: #ff3366;
+        color: #C23334;
         background-color: transparent;
     }
 }
